[gd_scene load_steps=19 format=4 uid="uid://dq1ee2tib7y6b"]

[ext_resource type="TileSet" uid="uid://dtonq2itaxro5" path="res://tilesheets/pacsheet.tres" id="1_d7wb0"]
[ext_resource type="Script" path="res://character/pacrat.gd" id="2_08kog"]
[ext_resource type="Texture2D" uid="uid://co25twmxd87bq" path="res://sprites/rat_char.png" id="3_8peiq"]
[ext_resource type="Script" path="res://objects/pac/cat.gd" id="4_ywfqv"]
[ext_resource type="Texture2D" uid="uid://crjfqabfxdsgy" path="res://sprites/pac/cat_char.png" id="5_fesdt"]
[ext_resource type="Script" path="res://objects/pac/zone_trigger.gd" id="6_rd6ad"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxmq2"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kwdfd"]
atlas = ExtResource("3_8peiq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyvul"]
atlas = ExtResource("3_8peiq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bpcn"]
atlas = ExtResource("3_8peiq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wj57h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwdfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyvul")
}],
"loop": true,
"name": &"moving",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bpcn")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rnw37"]
atlas = ExtResource("5_fesdt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_se3kq"]
atlas = ExtResource("5_fesdt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_neki7"]
atlas = ExtResource("5_fesdt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2unr"]
atlas = ExtResource("5_fesdt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2ebd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnw37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se3kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neki7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2unr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2gbun"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pi7qq"]
size = Vector2(28, 28)

[node name="Node2D" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(579, 301)
zoom = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Map" type="TileMapLayer" parent="."]
position = Vector2(208, -152)
tile_map_data = PackedByteArray("AAAhACkAAAAAAAAAAAAiACkAAAAAAAMAAAAjACkAAAAAAAMAAAAhACoAAAABAAIAAAAhACsAAAABAAIAAAAhACwAAAABAAIAAAAhAC0AAAABAAIAAAAhAC4AAAABAAIAAAAhAC8AAAABAAIAAAAhADAAAAABAAIAAAAhADEAAAABAAIAAAAhADIAAAAAAAEAAAAiADIAAAABAAMAAAAjADIAAAABAAMAAAAkADIAAAABAAMAAAAlADIAAAABAAMAAAAmADIAAAADAAAAAAAmADMAAAABAAIAAAAmADQAAAABAAIAAAAmADUAAAABAAIAAAAmADYAAAADAAEAAAAlADYAAAAAAAMAAAAkADYAAAAAAAMAAAAjADYAAAAAAAMAAAAiADYAAAAAAAMAAAAhADYAAAAAAAMAAAAhADgAAAABAAMAAAAiADgAAAABAAMAAAAjADgAAAABAAMAAAAkADgAAAABAAMAAAAlADgAAAABAAMAAAAmADgAAAADAAAAAAAmADkAAAABAAIAAAAmADoAAAABAAIAAAAmADsAAAABAAIAAAAmADwAAAADAAEAAAAlADwAAAAAAAMAAAAkADwAAAAAAAMAAAAjADwAAAAAAAMAAAAiADwAAAAAAAMAAAAhADwAAAAAAAAAAAAhAD0AAAABAAIAAAAhAD4AAAABAAIAAAAhAD8AAAABAAIAAAAhAEAAAAABAAIAAAAkACkAAAAAAAMAAAAlACkAAAAAAAMAAAAmACkAAAAAAAMAAAAjACsAAAACAAAAAAAjACwAAAAAAAIAAAAjAC0AAAACAAEAAAAkACsAAAABAAMAAAAlACsAAAABAAMAAAAkAC0AAAAAAAMAAAAlAC0AAAAAAAMAAAAmACsAAAADAAAAAAAmAC0AAAADAAEAAAAmACwAAAABAAIAAAAoACwAAAAAAAIAAAAoACsAAAACAAAAAAApACsAAAABAAMAAAAqACsAAAABAAMAAAArACsAAAABAAMAAAAsACsAAAADAAAAAAAsACwAAAABAAIAAAAsAC0AAAADAAEAAAAoAC0AAAACAAEAAAApAC0AAAAAAAMAAAAqAC0AAAAAAAMAAAArAC0AAAAAAAMAAAAjAC8AAAACAAAAAAAjADAAAAACAAEAAAAkAC8AAAABAAMAAAAlAC8AAAABAAMAAAAkADAAAAAAAAMAAAAlADAAAAAAAAMAAAAmAC8AAAADAAAAAAAmADAAAAADAAEAAAAnACkAAAAAAAMAAAAoACkAAAAAAAMAAAApACkAAAAAAAMAAAAqACkAAAAAAAMAAAArACkAAAAAAAMAAAAsACkAAAAAAAMAAAAtACkAAAAAAAMAAAAuACwAAAAAAAIAAAAuACsAAAAAAAIAAAAuACoAAAAAAAIAAAAuACkAAAABAAAAAAAvACkAAAAAAAAAAAAuAC0AAAACAAEAAAAvAC0AAAADAAEAAAAvACwAAAABAAIAAAAvACsAAAABAAIAAAAvACoAAAABAAIAAAAoAC8AAAACAAAAAAApAC8AAAADAAAAAAApADAAAAABAAIAAAAoADAAAAAAAAIAAAAoADEAAAAAAAIAAAAoADIAAAAAAAIAAAAoADMAAAAAAAIAAAAoADQAAAAAAAIAAAAoADUAAAAAAAIAAAAoADYAAAACAAEAAAApADYAAAADAAEAAAApADUAAAABAAIAAAApADQAAAABAAIAAAApADEAAAABAAIAAAAqADIAAAABAAMAAAArADIAAAABAAMAAAAqADMAAAAAAAMAAAArADMAAAAAAAMAAAAsADMAAAADAAEAAAAsADIAAAADAAAAAAApADMAAAAAAAAAAAApADIAAAAAAAEAAAAoADgAAAACAAAAAAApADgAAAADAAAAAAApADkAAAABAAIAAAApADoAAAABAAIAAAApADsAAAABAAIAAAApADwAAAADAAEAAAAoADwAAAACAAEAAAAoADkAAAAAAAIAAAAoADoAAAAAAAIAAAAoADsAAAAAAAIAAAAoAD4AAAACAAAAAAAoAD8AAAACAAEAAAApAD8AAAAAAAMAAAAqAD8AAAAAAAMAAAApAD4AAAABAAMAAAAqAD4AAAABAAMAAAArAD4AAAABAAMAAAArAD8AAAAAAAMAAAAsAD8AAAADAAEAAAAsAD4AAAADAAAAAAAmAD4AAAADAAAAAAAlAD4AAAABAAMAAAAkAD4AAAABAAMAAAAjAD4AAAACAAAAAAAjAD8AAAACAAEAAAAlAEAAAAAAAAIAAAAlAEEAAAAAAAIAAAAlAEIAAAACAAEAAAAmAEIAAAADAAEAAAAmAEEAAAABAAIAAAAmAEAAAAABAAIAAAAmAD8AAAABAAIAAAAlAD8AAAABAAAAAAAlAEQAAAABAAMAAAAmAEQAAAABAAMAAAAoAEEAAAACAAAAAAApAEEAAAADAAAAAAApAEIAAAABAAIAAAApAEMAAAABAAIAAAApAEQAAAAAAAEAAAAqAEQAAAABAAMAAAArAEQAAAABAAMAAAAsAEQAAAADAAAAAAAsAEUAAAADAAEAAAArAEUAAAAAAAMAAAApAEUAAAAAAAMAAAAqAEUAAAAAAAMAAAAoAEUAAAAAAAMAAAAnAEUAAAAAAAMAAAAmAEUAAAAAAAMAAAAlAEUAAAAAAAMAAAAoAEIAAAAAAAIAAAAoAEMAAAAAAAIAAAAoAEQAAAABAAEAAAAnAEQAAAABAAMAAAAkAEQAAAABAAMAAAAkAEUAAAAAAAMAAAAjAEQAAAACAAAAAAAjAEUAAAACAAEAAAAhAEQAAAABAAIAAAAhAEUAAAABAAIAAAAhAEYAAAABAAIAAAAhAEMAAAABAAIAAAAhAEcAAAAAAAEAAAAiAEcAAAABAAMAAAAjAEcAAAABAAMAAAAkAEcAAAABAAMAAAAlAEcAAAABAAMAAAAmAEcAAAABAAMAAAAnAEcAAAABAAMAAAAoAEcAAAABAAMAAAApAEcAAAABAAMAAAAqAEcAAAABAAMAAAArAEcAAAABAAMAAAAsAEcAAAABAAMAAAAtAEcAAAABAAMAAAAuAEcAAAABAAMAAAAvAEcAAAABAAMAAAAwAEcAAAABAAMAAAAxAEcAAAABAAMAAAAyAEcAAAABAAMAAAAzAEcAAAABAAMAAAA0AEcAAAABAAMAAAA1AEcAAAABAAMAAAAuAEUAAAACAAEAAAAvAEUAAAADAAEAAAAuAEQAAAAAAAIAAAAuAEMAAAAAAAIAAAAvAEQAAAABAAIAAAAvAEMAAAABAAIAAAAuAEIAAAABAAAAAAAvAEIAAAAAAAAAAAAwAEIAAAAAAAMAAAAxAEIAAAAAAAMAAAAtAEIAAAAAAAMAAAAsAEIAAAAAAAMAAAArAEIAAAACAAEAAAArAEEAAAACAAAAAAAyAEIAAAADAAEAAAAyAEEAAAADAAAAAAAxAEEAAAABAAMAAAAwAEEAAAABAAMAAAAvAEEAAAABAAMAAAAuAEEAAAABAAMAAAAtAEEAAAABAAMAAAAsAEEAAAABAAMAAAAuAD8AAAACAAEAAAAvAD8AAAADAAEAAAAuAD4AAAAAAAIAAAAuAD0AAAAAAAIAAAAvAD0AAAABAAIAAAAvAD4AAAABAAIAAAAuADwAAAABAAAAAAAvADwAAAAAAAAAAAAuADsAAAABAAMAAAAvADsAAAABAAMAAAAwADsAAAABAAMAAAAxADsAAAABAAMAAAAtADsAAAABAAMAAAAsADsAAAABAAMAAAArADsAAAACAAAAAAArADwAAAACAAEAAAAyADsAAAADAAAAAAAyADwAAAADAAEAAAAwADwAAAAAAAMAAAAxADwAAAAAAAMAAAAsADwAAAAAAAMAAAAtADwAAAAAAAMAAAAxAEQAAAACAAAAAAAxAEUAAAACAAEAAAAyAEQAAAABAAMAAAAzAEQAAAABAAMAAAAyAEUAAAAAAAMAAAAzAEUAAAAAAAMAAAA0AEUAAAAAAAMAAAA1AEUAAAAAAAMAAAA0AEQAAAABAAEAAAA0AEMAAAAAAAIAAAA0AEIAAAAAAAIAAAA0AEEAAAACAAAAAAA1AEEAAAADAAAAAAA1AEIAAAABAAIAAAA1AEMAAAABAAIAAAA1AEQAAAAAAAEAAAA2AEUAAAAAAAMAAAA3AEUAAAAAAAMAAAA4AEUAAAAAAAMAAAA5AEUAAAAAAAMAAAA6AEUAAAADAAEAAAA6AEQAAAADAAAAAAA5AEQAAAABAAMAAAA4AEQAAAABAAMAAAA3AEQAAAABAAMAAAA2AEQAAAABAAMAAAA0AD8AAAAAAAMAAAA1AD8AAAADAAEAAAAzAD8AAAAAAAMAAAAyAD8AAAAAAAMAAAAxAD8AAAACAAEAAAAxAD4AAAACAAAAAAAyAD4AAAABAAMAAAAzAD4AAAABAAMAAAA0AD4AAAABAAMAAAA1AD4AAAADAAAAAAA0ADwAAAACAAEAAAA1ADwAAAADAAEAAAA0ADsAAAAAAAIAAAA0ADoAAAAAAAIAAAA0ADkAAAAAAAIAAAA1ADkAAAABAAIAAAA1ADoAAAABAAIAAAA1ADsAAAABAAIAAAA0ADgAAAACAAAAAAA1ADgAAAADAAAAAAA3AD4AAAACAAAAAAA4AD4AAAABAAMAAAA5AD4AAAABAAMAAAA3AD8AAAAAAAIAAAA3AEAAAAAAAAIAAAA3AEEAAAAAAAIAAAA3AEIAAAACAAEAAAA4AEIAAAADAAEAAAA4AEEAAAABAAIAAAA4AEAAAAABAAIAAAA4AD8AAAAAAAAAAAA5AD8AAAAAAAMAAAA6AD4AAAADAAAAAAA6AD8AAAADAAEAAAA8AD8AAAAAAAIAAAA8AD4AAAAAAAIAAAA2AEcAAAABAAMAAAA3AEcAAAABAAMAAAA4AEcAAAABAAMAAAA5AEcAAAABAAMAAAA6AEcAAAABAAMAAAA7AEcAAAABAAMAAAA8AEcAAAABAAEAAAA8AEYAAAAAAAIAAAA8AEUAAAAAAAIAAAA8AEQAAAAAAAIAAAA8AEMAAAAAAAIAAAA8AEAAAAAAAAIAAAA8AEEAAAABAAEAAAA8AEIAAAABAAAAAAA7AEIAAAAAAAMAAAA6AEIAAAACAAEAAAA6AEEAAAACAAAAAAA7AEEAAAABAAMAAAAhAEIAAAAAAAAAAAAhAEEAAAAAAAEAAAAiAEEAAAABAAMAAAAiAEIAAAAAAAMAAAAjAEEAAAADAAAAAAAjAEIAAAADAAEAAAA8AD0AAAAAAAIAAAA8ADwAAAABAAAAAAA7ADwAAAAAAAMAAAA6ADwAAAAAAAMAAAA5ADwAAAAAAAMAAAA3ADwAAAACAAEAAAA3ADsAAAAAAAIAAAA3ADoAAAAAAAIAAAA3ADkAAAAAAAIAAAA3ADgAAAACAAAAAAA4ADgAAAABAAMAAAA5ADgAAAABAAMAAAA6ADgAAAABAAMAAAA7ADgAAAABAAMAAAA8ADgAAAABAAMAAAA8ADYAAAAAAAMAAAA7ADYAAAAAAAMAAAA6ADYAAAAAAAMAAAA5ADYAAAAAAAMAAAA4ADYAAAAAAAMAAAA3ADYAAAACAAEAAAA3ADUAAAAAAAIAAAA3ADQAAAAAAAIAAAA3ADMAAAAAAAIAAAA8ADEAAAAAAAIAAAA8ADAAAAAAAAIAAAA8AC8AAAAAAAIAAAA8AC4AAAAAAAIAAAA8AC0AAAAAAAIAAAA8ACwAAAAAAAIAAAA8ACsAAAAAAAIAAAA8ACkAAAABAAAAAAA8ACoAAAAAAAIAAAA7ACkAAAAAAAMAAAA6ACkAAAAAAAMAAAA5ACkAAAAAAAMAAAA4ACkAAAAAAAMAAAA3ACkAAAAAAAMAAAA2ACkAAAAAAAMAAAA1ACkAAAAAAAMAAAA0ACkAAAAAAAMAAAAzACkAAAAAAAMAAAAyACkAAAAAAAMAAAAxACkAAAAAAAMAAAAwACkAAAAAAAMAAAA4ADwAAAAAAAMAAAA0ADYAAAACAAEAAAA1ADYAAAADAAEAAAA1ADUAAAABAAIAAAA1ADQAAAABAAIAAAA1ADMAAAABAAIAAAA1ADIAAAABAAIAAAA1ADEAAAABAAIAAAA4ADIAAAABAAMAAAA5ADIAAAABAAMAAAA6ADIAAAABAAMAAAA7ADIAAAABAAMAAAA3ADIAAAACAAAAAAA8ADIAAAABAAEAAAA0AC8AAAACAAAAAAA1AC8AAAADAAAAAAA1ADAAAAABAAIAAAA0ADAAAAAAAAIAAAA0ADEAAAAAAAIAAAA0ADIAAAABAAEAAAA0ADMAAAABAAAAAAA0ADQAAAAAAAIAAAA0ADUAAAAAAAIAAAAzADIAAAABAAMAAAAyADIAAAABAAMAAAAzADMAAAAAAAMAAAAyADMAAAAAAAMAAAAxADIAAAACAAAAAAAxADMAAAACAAEAAAA3AC8AAAACAAAAAAA3ADAAAAACAAEAAAA6AC8AAAADAAAAAAA6ADAAAAADAAEAAAA4AC8AAAABAAMAAAA5AC8AAAABAAMAAAA4ADAAAAAAAAMAAAA5ADAAAAAAAAMAAAA3AC0AAAACAAEAAAA6AC0AAAADAAEAAAA6ACsAAAADAAAAAAA3ACsAAAACAAAAAAA3ACwAAAAAAAIAAAA6ACwAAAABAAIAAAA4ACsAAAABAAMAAAA5ACsAAAABAAMAAAA4AC0AAAAAAAMAAAA5AC0AAAAAAAMAAAA1ACsAAAADAAAAAAA1AC0AAAADAAEAAAAxACsAAAACAAAAAAAxAC0AAAACAAEAAAAxACwAAAAAAAIAAAAyACsAAAABAAMAAAAzACsAAAABAAMAAAA0ACsAAAABAAMAAAA1ACwAAAABAAIAAAAyAC0AAAAAAAMAAAAzAC0AAAAAAAMAAAA0AC0AAAAAAAMAAAArAC8AAAACAAAAAAAyAC8AAAADAAAAAAAxAC8AAAABAAMAAAAwAC8AAAABAAMAAAAvAC8AAAABAAMAAAAuAC8AAAABAAMAAAAtAC8AAAABAAMAAAAsAC8AAAABAAMAAAArADAAAAACAAEAAAAyADAAAAADAAEAAAAsADAAAAAAAAMAAAAtADAAAAAAAAMAAAAxADAAAAAAAAMAAAAwADAAAAAAAAMAAAAvADAAAAAAAAAAAAAuADAAAAABAAAAAAAuADEAAAAAAAIAAAAuADIAAAAAAAIAAAAvADEAAAABAAIAAAAvADIAAAABAAIAAAAuADMAAAACAAEAAAAvADMAAAADAAEAAAAtADUAAAABAAMAAAAsADUAAAABAAMAAAAwADUAAAABAAMAAAAxADUAAAABAAMAAAAyADUAAAADAAAAAAAyADYAAAABAAIAAAAyADcAAAABAAIAAAAyADgAAAABAAIAAAAyADkAAAADAAEAAAAxADkAAAAAAAMAAAAwADkAAAAAAAMAAAAvADkAAAAAAAMAAAAuADkAAAAAAAMAAAAtADkAAAAAAAMAAAAsADkAAAAAAAMAAAArADUAAAACAAAAAAArADkAAAACAAEAAAArADYAAAAAAAIAAAArADcAAAAAAAIAAAArADgAAAAAAAIAAAAzADwAAAAAAAcAAAAzADsAAAAAAAcAAAAzADoAAAAAAAcAAAAzADkAAAAAAAcAAAAzADgAAAAAAAcAAAAzADcAAAAAAAcAAAA1ADcAAAAAAAcAAAA0ADcAAAAAAAcAAAAyADoAAAAAAAcAAAAxADoAAAAAAAcAAAAwADoAAAAAAAcAAAAvADoAAAAAAAcAAAAuADoAAAAAAAcAAAAtADoAAAAAAAcAAAAsADoAAAAAAAcAAAArADoAAAAAAAcAAAAqADoAAAAAAAcAAAAqADsAAAAAAAcAAAAqADwAAAAAAAcAAAAqADgAAAAAAAcAAAAqADkAAAAAAAcAAAAtADIAAAAAAAcAAAAtADMAAAAAAAcAAAAtADQAAAAAAAcAAAAsADQAAAAAAAcAAAArADQAAAAAAAcAAAAqADQAAAAAAAcAAAAqADUAAAAAAAcAAAAqADYAAAAAAAcAAAAuADQAAAAAAAcAAAAvADQAAAAAAAcAAAAwADQAAAAAAAcAAAAxADQAAAAAAAcAAAAyADQAAAAAAAcAAAAzADQAAAAAAAcAAAAzADUAAAAAAAcAAAAzADYAAAAAAAcAAAAwADMAAAAAAAcAAAAwADIAAAAAAAcAAAAvADUAAAAAAAcAAAAuADUAAAAAAAcAAAAsADcAAAAAAAcAAAAtADcAAAAAAAcAAAAuADcAAAAAAAcAAAAuADgAAAAAAAcAAAAvADgAAAAAAAcAAAAwADgAAAAAAAcAAAAwADcAAAAAAAcAAAAxADcAAAAAAAcAAAAxADYAAAAAAAcAAAAwADYAAAAAAAcAAAAvADYAAAAAAAcAAAAuADYAAAAAAAcAAAAtADYAAAAAAAcAAAAsADYAAAAAAAcAAAAtADgAAAAAAAcAAAAxADgAAAAAAAcAAAAvADcAAAAAAAcAAAAsADgAAAAAAAcAAAAkAD8AAAAAAAMAAAAnAEEAAAAAAAcAAAAnAEAAAAAAAAcAAAAnAD8AAAAAAAcAAAAoAD0AAAAAAAcAAAAnAD4AAAAAAAcAAAAnAD0AAAAAAAcAAAAnADwAAAAAAAcAAAAnADsAAAAAAAcAAAAnADoAAAAAAAcAAAAmAEMAAAAAAAcAAAAkAEMAAAAAAAcAAAAlAEMAAAAAAAcAAAAqAEMAAAAAAAcAAAArAEMAAAAAAAcAAAAwAEUAAAAAAAcAAAAiAEYAAAAAAAcAAAAjAEYAAAAAAAcAAAAkAEYAAAAAAAcAAAAlAEYAAAAAAAcAAAAmAEYAAAAAAAcAAAAnAEYAAAAAAAcAAAAoAEYAAAAAAAcAAAApAEYAAAAAAAcAAAAqAEYAAAAAAAcAAAArAEYAAAAAAAcAAAAsAEYAAAAAAAcAAAAtAEYAAAAAAAcAAAAuAEYAAAAAAAcAAAAvAEYAAAAAAAcAAAAwAEYAAAAAAAcAAAAxAEYAAAAAAAcAAAAyAEYAAAAAAAcAAAAzAEYAAAAAAAcAAAA0AEYAAAAAAAcAAAA1AEYAAAAAAAcAAAA2AEYAAAAAAAcAAAA3AEYAAAAAAAcAAAA4AEYAAAAAAAcAAAA5AEYAAAAAAAcAAAA6AEYAAAAAAAcAAAA7AEYAAAAAAAcAAAA2AD4AAAAAAAcAAAA2AD0AAAAAAAcAAAA2ADwAAAAAAAcAAAA2ADsAAAAAAAcAAAA2ADoAAAAAAAcAAAA2ADkAAAAAAAcAAAA2ADgAAAAAAAcAAAA2ADcAAAAAAAcAAAA2ADYAAAAAAAcAAAA2ADUAAAAAAAcAAAA2ADQAAAAAAAcAAAA2ADMAAAAAAAcAAAA2ADIAAAAAAAcAAAA2ADEAAAAAAAcAAAA2ADAAAAAAAAcAAAA2AC8AAAAAAAcAAAA2AC4AAAAAAAcAAAA2AC0AAAAAAAcAAAA2ACwAAAAAAAcAAAA2ACsAAAAAAAcAAAA2ACoAAAAAAAcAAAA1ACoAAAAAAAcAAAA0ACoAAAAAAAcAAAAzACoAAAAAAAcAAAAyACoAAAAAAAcAAAAxACoAAAAAAAcAAAAwACoAAAAAAAcAAAAwACsAAAAAAAcAAAAwACwAAAAAAAcAAAAwAC0AAAAAAAcAAAAwAC4AAAAAAAcAAAAvAC4AAAAAAAcAAAAuAC4AAAAAAAcAAAAtAC4AAAAAAAcAAAAtAC0AAAAAAAcAAAAtACwAAAAAAAcAAAAtACsAAAAAAAcAAAAtACoAAAAAAAcAAAAsACoAAAAAAAcAAAArACoAAAAAAAcAAAAqACoAAAAAAAcAAAApACoAAAAAAAcAAAAoACoAAAAAAAcAAAAnACoAAAAAAAcAAAAmACoAAAAAAAcAAAAlACoAAAAAAAcAAAAkACoAAAAAAAcAAAAjACoAAAAAAAcAAAAiACoAAAAAAAcAAAAiACsAAAAAAAcAAAAiACwAAAAAAAcAAAAiAC0AAAAAAAcAAAAiAC4AAAAAAAcAAAAiAC8AAAAAAAcAAAAiADAAAAAAAAcAAAAiADEAAAAAAAcAAAAjADEAAAAAAAcAAAAkADEAAAAAAAcAAAAlADEAAAAAAAcAAAAmADEAAAAAAAcAAAAnADEAAAAAAAcAAAAnADAAAAAAAAcAAAAnAC8AAAAAAAcAAAAnAC4AAAAAAAcAAAAnAC0AAAAAAAcAAAAnACwAAAAAAAcAAAAnACsAAAAAAAcAAAAmAC4AAAAAAAcAAAAlAC4AAAAAAAcAAAAkAC4AAAAAAAcAAAAjAC4AAAAAAAcAAAAoAC4AAAAAAAcAAAApAC4AAAAAAAcAAAAqAC4AAAAAAAcAAAAqAC8AAAAAAAcAAAAqADAAAAAAAAcAAAAqADEAAAAAAAcAAAArADEAAAAAAAcAAAAsADEAAAAAAAcAAAAtADEAAAAAAAcAAAArAC4AAAAAAAcAAAAsAC4AAAAAAAcAAAAnADIAAAAAAAcAAAAnADMAAAAAAAcAAAAnADQAAAAAAAcAAAAnADUAAAAAAAcAAAAnADYAAAAAAAcAAAAnADcAAAAAAAcAAAAmADcAAAAAAAcAAAAlADcAAAAAAAcAAAAkADcAAAAAAAcAAAAjADcAAAAAAAcAAAAiADcAAAAAAAcAAAAnADgAAAAAAAcAAAAnADkAAAAAAAcAAAAoADcAAAAAAAcAAAApADcAAAAAAAcAAAAqADcAAAAAAAcAAAAxAC4AAAAAAAcAAAAyAC4AAAAAAAcAAAAzAC4AAAAAAAcAAAAzAC8AAAAAAAcAAAAzADAAAAAAAAcAAAAzADEAAAAAAAcAAAAyADEAAAAAAAcAAAAxADEAAAAAAAcAAAAwADEAAAAAAAcAAAA0AC4AAAAAAAcAAAA1AC4AAAAAAAcAAAA3ACoAAAAAAAcAAAA4ACoAAAAAAAcAAAA5ACoAAAAAAAcAAAA6ACoAAAAAAAcAAAA7ACoAAAAAAAcAAAA7ACsAAAAAAAcAAAA7ACwAAAAAAAcAAAA7AC0AAAAAAAcAAAA7AC4AAAAAAAcAAAA6AC4AAAAAAAcAAAA5AC4AAAAAAAcAAAA4AC4AAAAAAAcAAAA3AC4AAAAAAAcAAAA7AC8AAAAAAAcAAAA7ADAAAAAAAAcAAAA7ADEAAAAAAAcAAAA6ADEAAAAAAAcAAAA5ADEAAAAAAAcAAAA4ADEAAAAAAAcAAAA3ADEAAAAAAAcAAAA3ADcAAAAAAAcAAAA4ADcAAAAAAAcAAAA5ADcAAAAAAAcAAAA6ADcAAAAAAAcAAAA7ADcAAAAAAAcAAAA1AD0AAAAAAAcAAAA0AD0AAAAAAAcAAAAzAD0AAAAAAAcAAAAyAD0AAAAAAAcAAAAxAD0AAAAAAAcAAAAwAD0AAAAAAAcAAAAwAD4AAAAAAAcAAAAwAD8AAAAAAAcAAAAwAEAAAAAAAAcAAAAvAEAAAAAAAAcAAAAuAEAAAAAAAAcAAAAtAEAAAAAAAAcAAAAtAD8AAAAAAAcAAAAtAD4AAAAAAAcAAAAtAD0AAAAAAAcAAAAsAD0AAAAAAAcAAAArAD0AAAAAAAcAAAAqAD0AAAAAAAcAAAApAD0AAAAAAAcAAAAsAEAAAAAAAAcAAAArAEAAAAAAAAcAAAAqAEAAAAAAAAcAAAApAEAAAAAAAAcAAAAoAEAAAAAAAAcAAAAqAEEAAAAAAAcAAAAqAEIAAAAAAAcAAAAxAEAAAAAAAAcAAAAyAEAAAAAAAAcAAAAzAEAAAAAAAAcAAAAzAEEAAAAAAAcAAAAzAEIAAAAAAAcAAAAzAEMAAAAAAAcAAAAyAEMAAAAAAAcAAAAxAEMAAAAAAAcAAAAwAEMAAAAAAAcAAAAwAEQAAAAAAAcAAAA0AEAAAAAAAAcAAAA1AEAAAAAAAAcAAAA2AEAAAAAAAAcAAAA2AD8AAAAAAAcAAAA2AEEAAAAAAAcAAAA2AEIAAAAAAAcAAAA2AEMAAAAAAAcAAAA3AEMAAAAAAAcAAAA4AEMAAAAAAAcAAAA5AEMAAAAAAAcAAAA5AEIAAAAAAAcAAAA5AEEAAAAAAAcAAAA5AEAAAAAAAAcAAAA6AEAAAAAAAAcAAAA7AEAAAAAAAAcAAAA7AD8AAAAAAAcAAAA7AD4AAAAAAAcAAAA7AD0AAAAAAAcAAAA6AD0AAAAAAAcAAAA5AD0AAAAAAAcAAAA4AD0AAAAAAAcAAAA3AD0AAAAAAAcAAAA6AEMAAAAAAAcAAAA7AEMAAAAAAAcAAAA7AEQAAAAAAAcAAAA7AEUAAAAAAAcAAAAiAD8AAAAAAAcAAAAiAD4AAAAAAAcAAAAiAD0AAAAAAAcAAAAjAD0AAAAAAAcAAAAkAD0AAAAAAAcAAAAlAD0AAAAAAAcAAAAmAD0AAAAAAAcAAAAiAEAAAAAAAAcAAAAjAEAAAAAAAAcAAAAkAEAAAAAAAAcAAAAkAEEAAAAAAAcAAAAkAEIAAAAAAAcAAAAtAEQAAAAAAAcAAAAtAEMAAAAAAAcAAAAsAEMAAAAAAAcAAAAtAEUAAAAAAAcAAAAiAEQAAAAAAAcAAAAiAEMAAAAAAAcAAAAjAEMAAAAAAAcAAAAiAEUAAAAAAAcAAAAnAEMAAAAAAAcAAAAnAEIAAAAAAAcAAAA=")
tile_set = ExtResource("1_d7wb0")
metadata/_edit_group_ = true

[node name="DotLayer" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAAiAEYAAQAAAAAAAQAjAEYAAQAAAAAAAQAkAEYAAQAAAAAAAQAlAEYAAQAAAAAAAQAmAEYAAQAAAAAAAQAnAEYAAQAAAAAAAQAoAEYAAQAAAAAAAQApAEYAAQAAAAAAAQAqAEYAAQAAAAAAAQArAEYAAQAAAAAAAQAsAEYAAQAAAAAAAQAtAEYAAQAAAAAAAQAuAEYAAQAAAAAAAQAvAEYAAQAAAAAAAQAwAEYAAQAAAAAAAQAxAEYAAQAAAAAAAQAyAEYAAQAAAAAAAQAzAEYAAQAAAAAAAQA0AEYAAQAAAAAAAQA1AEYAAQAAAAAAAQA2AEYAAQAAAAAAAQA3AEYAAQAAAAAAAQA4AEYAAQAAAAAAAQA5AEYAAQAAAAAAAQA6AEYAAQAAAAAAAQA7AEYAAQAAAAAAAQA7AEUAAQAAAAAAAQA7AEQAAQAAAAAAAQA7AEMAAQAAAAAAAQA6AEMAAQAAAAAAAQA5AEMAAQAAAAAAAQA4AEMAAQAAAAAAAQA3AEMAAQAAAAAAAQA2AEMAAQAAAAAAAQA2AEIAAQAAAAAAAQA2AEEAAQAAAAAAAQA2AEAAAQAAAAAAAQA2AD8AAQAAAAAAAQA2AD4AAQAAAAAAAQA2AD0AAQAAAAAAAQA2ADwAAQAAAAAAAQA2ADsAAQAAAAAAAQA2ADoAAQAAAAAAAQA2ADkAAQAAAAAAAQA2ADgAAQAAAAAAAQA2ADcAAQAAAAAAAQA2ADYAAQAAAAAAAQA2ADUAAQAAAAAAAQA2ADQAAQAAAAAAAQA2ADMAAQAAAAAAAQA2ADIAAQAAAAAAAQA2ADEAAQAAAAAAAQA2ADAAAQAAAAAAAQA2AC8AAQAAAAAAAQA2AC4AAQAAAAAAAQA2AC0AAQAAAAAAAQA2ACwAAQAAAAAAAQA2ACsAAQAAAAAAAQA2ACoAAQAAAAAAAQAnAEMAAQAAAAAAAQAnAEIAAQAAAAAAAQAnAEEAAQAAAAAAAQAnAEAAAQAAAAAAAQAnAD8AAQAAAAAAAQAnAD4AAQAAAAAAAQAnAD0AAQAAAAAAAQAnADwAAQAAAAAAAQAnADsAAQAAAAAAAQAnADoAAQAAAAAAAQAnADkAAQAAAAAAAQAnADgAAQAAAAAAAQAnADcAAQAAAAAAAQAnADYAAQAAAAAAAQAnADUAAQAAAAAAAQAnADQAAQAAAAAAAQAnADMAAQAAAAAAAQAnADIAAQAAAAAAAQAnADEAAQAAAAAAAQAnADAAAQAAAAAAAQAnAC8AAQAAAAAAAQAnAC4AAQAAAAAAAQAnAC0AAQAAAAAAAQAnACwAAQAAAAAAAQAnACsAAQAAAAAAAQAnACoAAQAAAAAAAQAiACoAAQAAAAAAAQAjACoAAQAAAAAAAQAkACoAAQAAAAAAAQAlACoAAQAAAAAAAQAmACoAAQAAAAAAAQAoACoAAQAAAAAAAQApACoAAQAAAAAAAQAqACoAAQAAAAAAAQArACoAAQAAAAAAAQAsACoAAQAAAAAAAQAtACoAAQAAAAAAAQAtACsAAQAAAAAAAQAtACwAAQAAAAAAAQAtAC0AAQAAAAAAAQAtAC4AAQAAAAAAAQAiAC4AAQAAAAAAAQAjAC4AAQAAAAAAAQAkAC4AAQAAAAAAAQAlAC4AAQAAAAAAAQAmAC4AAQAAAAAAAQAoAC4AAQAAAAAAAQApAC4AAQAAAAAAAQAqAC4AAQAAAAAAAQArAC4AAQAAAAAAAQAsAC4AAQAAAAAAAQAuAC4AAQAAAAAAAQAvAC4AAQAAAAAAAQAwAC4AAQAAAAAAAQAxAC4AAQAAAAAAAQAyAC4AAQAAAAAAAQAzAC4AAQAAAAAAAQA0AC4AAQAAAAAAAQA1AC4AAQAAAAAAAQA3AC4AAQAAAAAAAQA4AC4AAQAAAAAAAQA5AC4AAQAAAAAAAQA6AC4AAQAAAAAAAQA7AC4AAQAAAAAAAQA7AC0AAQAAAAAAAQA7ACwAAQAAAAAAAQA7ACsAAQAAAAAAAQA7ACoAAQAAAAAAAQA6ACoAAQAAAAAAAQA5ACoAAQAAAAAAAQA4ACoAAQAAAAAAAQA3ACoAAQAAAAAAAQA1ACoAAQAAAAAAAQA0ACoAAQAAAAAAAQAzACoAAQAAAAAAAQAyACoAAQAAAAAAAQAxACoAAQAAAAAAAQAwACoAAQAAAAAAAQAwACsAAQAAAAAAAQAwACwAAQAAAAAAAQAwAC0AAQAAAAAAAQA7AC8AAQAAAAAAAQA7ADAAAQAAAAAAAQA7ADEAAQAAAAAAAQA6ADEAAQAAAAAAAQA5ADEAAQAAAAAAAQA4ADEAAQAAAAAAAQA3ADEAAQAAAAAAAQA3AD0AAQAAAAAAAQA4AD0AAQAAAAAAAQA5AD0AAQAAAAAAAQA6AD0AAQAAAAAAAQA7AD0AAQAAAAAAAQA7AD4AAQAAAAAAAQA7AD8AAQAAAAAAAQA7AEAAAQAAAAAAAQA6AEAAAQAAAAAAAQA5AEAAAQAAAAAAAQA5AEEAAQAAAAAAAQA5AEIAAQAAAAAAAQA1AEAAAQAAAAAAAQA0AEAAAQAAAAAAAQAzAEAAAQAAAAAAAQAyAEAAAQAAAAAAAQAxAEAAAQAAAAAAAQAwAEAAAQAAAAAAAQAwAD8AAQAAAAAAAQAwAD4AAQAAAAAAAQAwAD0AAQAAAAAAAQAxAD0AAQAAAAAAAQAyAD0AAQAAAAAAAQAzAD0AAQAAAAAAAQA0AD0AAQAAAAAAAQA1AD0AAQAAAAAAAQAtAEAAAQAAAAAAAQAtAD8AAQAAAAAAAQAtAD4AAQAAAAAAAQAtAD0AAQAAAAAAAQAsAD0AAQAAAAAAAQArAD0AAQAAAAAAAQAqAD0AAQAAAAAAAQApAD0AAQAAAAAAAQAoAD0AAQAAAAAAAQAsAEAAAQAAAAAAAQArAEAAAQAAAAAAAQAqAEAAAQAAAAAAAQApAEAAAQAAAAAAAQAoAEAAAQAAAAAAAQAqAEEAAQAAAAAAAQAqAEIAAQAAAAAAAQAqAEMAAQAAAAAAAQArAEMAAQAAAAAAAQAsAEMAAQAAAAAAAQAtAEMAAQAAAAAAAQAtAEQAAQAAAAAAAQAtAEUAAQAAAAAAAQAwAEUAAQAAAAAAAQAwAEQAAQAAAAAAAQAwAEMAAQAAAAAAAQAzAEMAAQAAAAAAAQAzAEIAAQAAAAAAAQAzAEEAAQAAAAAAAQAyAEMAAQAAAAAAAQAxAEMAAQAAAAAAAQAiAEUAAQAAAAAAAQAiAEQAAQAAAAAAAQAiAEMAAQAAAAAAAQAjAEMAAQAAAAAAAQAkAEMAAQAAAAAAAQAlAEMAAQAAAAAAAQAmAEMAAQAAAAAAAQAkAEIAAQAAAAAAAQAkAEEAAQAAAAAAAQAkAEAAAQAAAAAAAQAjAEAAAQAAAAAAAQAiAEAAAQAAAAAAAQAiAD8AAQAAAAAAAQAiAD4AAQAAAAAAAQAiAD0AAQAAAAAAAQAjAD0AAQAAAAAAAQAkAD0AAQAAAAAAAQAlAD0AAQAAAAAAAQAmAD0AAQAAAAAAAQAmADEAAQAAAAAAAQAlADEAAQAAAAAAAQAkADEAAQAAAAAAAQAjADEAAQAAAAAAAQAiADEAAQAAAAAAAQAiADAAAQAAAAAAAQAiAC8AAQAAAAAAAQAiAC0AAQAAAAAAAQAiACwAAQAAAAAAAQAiACsAAQAAAAAAAQAqAC8AAQAAAAAAAQAqADAAAQAAAAAAAQAqADEAAQAAAAAAAQArADEAAQAAAAAAAQAsADEAAQAAAAAAAQAtADEAAQAAAAAAAQAwADEAAQAAAAAAAQAxADEAAQAAAAAAAQAyADEAAQAAAAAAAQAzADEAAQAAAAAAAQAzADAAAQAAAAAAAQAzAC8AAQAAAAAAAQA=")
tile_set = ExtResource("1_d7wb0")
navigation_visibility_mode = 1

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(584, 364)
script = ExtResource("2_08kog")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_xxmq2")

[node name="Sprite" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_wj57h")
animation = &"moving"

[node name="Colliders" type="Node2D" parent="Player"]

[node name="DownRight" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(7, 0)
target_position = Vector2(0, 16)

[node name="DownLeft" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(-7, 0)
target_position = Vector2(0, 16)

[node name="UpRight" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(7, 0)
target_position = Vector2(0, -16)

[node name="UpLeft" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(-7, 0)
target_position = Vector2(0, -16)

[node name="LeftDown" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(0, 7)
target_position = Vector2(-16, 0)

[node name="LeftUp" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(0, -7)
target_position = Vector2(-16, 0)

[node name="RightUp" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(0, -7)
target_position = Vector2(16, 0)

[node name="RightDown" type="RayCast2D" parent="Player/Colliders"]
position = Vector2(0, 7)
target_position = Vector2(16, 0)

[node name="Cat" type="CharacterBody2D" parent="."]
position = Vector2(584, 268)
motion_mode = 1
script = ExtResource("4_ywfqv")
metadata/_edit_group_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="Cat"]
sprite_frames = SubResource("SpriteFrames_u2ebd")
autoplay = "default"
frame_progress = 0.309711

[node name="Collision" type="CollisionShape2D" parent="Cat"]
shape = SubResource("CircleShape2D_2gbun")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Cat"]

[node name="ZoneTrigger" type="Area2D" parent="."]
position = Vector2(440, 288)
script = ExtResource("6_rd6ad")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_pi7qq")

[node name="ZoneTrigger2" type="Area2D" parent="."]
position = Vector2(728, 288)
script = ExtResource("6_rd6ad")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger2"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_pi7qq")

[node name="DotSound" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="ZoneTrigger" to="ZoneTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="ZoneTrigger2" to="ZoneTrigger2" method="_on_body_entered"]
